# any2video

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
lib/: __init__.py  cleanup.py  cli.py  paths.py  plan_yaml.py
lib/audio/: bgm.py  sfx_selector.py
lib/compose/: ffmpeg_compose.py  subtitles.py
lib/critic/: plan_critic.py  scene_critic.py  scene_gate.py  ship_gate.py
lib/notify/: telegram.py
lib/render/: hyperframe_render.py  playwright_render.py  repo_footage.py  template_render.py
lib/sources/: article_fetch.py  github_deep.py  image_meta.py  router.py  text_input.py
lib/tts/: google_tts.py  narrate.py
render-remotion/: SCENE-DESIGN.md  package-lock.json  package.json  tsconfig.json
render-remotion/docs/skins/: README.md
render-remotion/src/: Root.tsx
render-remotion/src/lib/: core.tsx  footage.tsx  karaoke.tsx  skins.ts
render-remotion/src/videos/: ai-nguoi-moi-ep1-data.ts  ai-nguoi-moi-ep1.tsx  caveman-ponytail-data.ts  caveman-ponytail.tsx  chanktb-any2video-data.ts  chanktb-any2video-en-data.ts  chanktb-any2video-en.tsx  chanktb-any2video.tsx  fb-ads-2026-data.ts  fb-ads-2026.tsx  flow-movie-pipeline-pop-data.ts  flow-movie-pipeline-pop.tsx  flow-movie-pipeline-repodark.tsx  flow-movie-pipeline-tour-data.ts  flow-movie-pipeline-tour.tsx  (+12 more)
render-remotion/tools/: gen_voice.py  gen_voice_google.py  gen_voice_vieneu.py  stills_ep1.mjs  vieneu_bridge.py
skill/: SKILL.md  fb-post.md
skill/references/: reference-video-teardown.md  remotion-render.md
skill/templates/: analysis-schema.md  design-tokens.md  plan-schema.md
(+48 files in other folders)
