[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any2video"
version = "0.1.0"
description = "Deep-video skill toolbox — Claude-driven, per-scene visual design, 3-tier safe-zone enforcement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "pyyaml>=6.0,<7.0",
    "edge-tts>=6.1,<8.0",
    "playwright>=1.40,<2.0",
    "Pillow>=10.0,<12.0",
]

[project.scripts]
any2video = "any2video.lib.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["any2video*", "lib*"]

[tool.setuptools.package-dir]
"any2video.lib" = "lib"
